--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,9 @@
 ---
+import "@fontsource/poppins/500.css";
+import "@fontsource/poppins/600.css";
+import "@fontsource/poppins/400.css";
+import "@fontsource/poppins/700.css";
+
 interface Props {
 	title: string;
 }
@@ -16,7 +21,7 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="h-screen w-screen">
+	<body class="h-screen w-screen font-poppins text-txt">
 		<slot />
 	</body>
 </html>
