style: change some styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Sections from "../components/sections.svelte";
 
 <Layout title="Dikson's website">
 	<main
-		class="h-screen w-screen bg-orange-100/10 py-10 p-6 lg:py-10 lg:px-14 flex overflow-auto"
+		class="h-screen w-screen py-10 p-6 lg:py-10 lg:px-14 flex overflow-auto bg-back"
 	>
 		<Sections client:load />
 		<Nav client:load />
