--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import ThemeBtn from "../components/theme-btn.astro";
 import Layout from "../layouts/Layout.astro";
 import Nav from "../components/nav.svelte";
 import Sections from "../components/sections.svelte";
@@ -8,6 +9,7 @@ import Sections from "../components/sections.svelte";
 	<main
 		class="h-screen w-screen py-10 p-6 lg:py-10 lg:px-14 flex overflow-auto bg-back"
 	>
+		<ThemeBtn />
 		<Sections client:load />
 		<Nav client:load />
 	</main>
