style: change ui styles for text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import "../main.css";
 import ThemeBtn from "../components/theme-btn.astro";
 import Layout from "../layouts/Layout.astro";
 import Nav from "../components/nav.svelte";
@@ -6,9 +7,7 @@ import Sections from "../components/sections.svelte";
 ---
 
 <Layout title="Dikson's website">
-	<main
-		class="h-screen w-screen py-10 p-6 lg:py-10 lg:px-14 flex overflow-auto bg-back"
-	>
+	<main class="page-main flex py-10 p-6 lg:py-10 lg:px-14">
 		<ThemeBtn />
 		<Sections client:load />
 		<Nav client:load />
