--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="h-screen w-screen font-poppins text-txt">
+	<body class="h-screen w-screen font-poppins">
 		<slot />
 	</body>
 </html>
