--- a/src/components/theme-btn.astro
+++ b/src/components/theme-btn.astro
@@ -1,6 +1,6 @@
 <button
   id="button-theme"
-  class="rounded-full border border-txt/60 p-2 fixed top-4 right-4 hover:bg-txt/10"
+  class="rounded-full border border-txt/60 p-2 fixed top-4 right-4 hover:bg-txt/10 dark:border-brand/70 dark:hover:bg-brand/10"
 >
   <svg
     xmlns="http://www.w3.org/2000/svg"
@@ -14,7 +14,7 @@
   <svg
     xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 24 24"
-    class="w-5 h-5 theme-dark hidden"
+    class="w-5 h-5 theme-dark hidden fill-white"
   >
     <path
       d="M12 11.807A9.002 9.002 0 0 1 10.049 2a9.942 9.942 0 0 0-5.12 2.735c-3.905 3.905-3.905 10.237 0 14.142 3.906 3.906 10.237 3.905 14.143 0a9.946 9.946 0 0 0 2.735-5.119A9.003 9.003 0 0 1 12 11.807z"
